--- a/res/layout/shop.xml
+++ b/res/layout/shop.xml
@@ -2,13 +2,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
     <TextView 
         android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="朋友圈" 
-        android:textSize="24sp" 
-        android:gravity="center"/>
+        android:text="购物" 
+       	android:textSize="24sp"
+        android:gravity="center" />
+    
 
 </LinearLayout>
