--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -77,5 +77,34 @@
         android:text="游戏"
         android:textColor="#000000"
         android:textSize="16sp" />
+      <Button
+        android:id="@+id/button6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:drawableLeft="@drawable/zhi"
+        android:drawableRight="@drawable/zuo"
+        android:paddingBottom="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="5dp"
+        android:text="支付宝"
+        android:textColor="#000000"
+        android:textSize="16sp" />
+      <Button
+        android:id="@+id/button7"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:drawableLeft="@drawable/zhi"
+        android:drawableRight="@drawable/zuo"
+        android:paddingBottom="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="5dp"
+        android:text="listview"
+        android:textColor="#000000"
+        android:textSize="16sp" />
+    
 
 </LinearLayout>
