--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,7 +3,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <Button
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+            
+            <Button
         android:id="@+id/button1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -78,20 +87,6 @@
         android:textColor="#000000"
         android:textSize="16sp" />
       <Button
-        android:id="@+id/button6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:drawableLeft="@drawable/zhi"
-        android:drawableRight="@drawable/zuo"
-        android:paddingBottom="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="5dp"
-        android:text="支付宝"
-        android:textColor="#000000"
-        android:textSize="16sp" />
-      <Button
         android:id="@+id/button7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -105,6 +100,51 @@
         android:text="listview"
         android:textColor="#000000"
         android:textSize="16sp" />
-    
+      <Button
+        android:id="@+id/button6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:drawableLeft="@drawable/zhi"
+        android:drawableRight="@drawable/zuo"
+        android:paddingBottom="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="5dp"
+        android:text="测试"
+        android:textColor="#000000"
+        android:textSize="16sp" />
+      <Button
+        android:id="@+id/button8"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:drawableLeft="@drawable/zhi"
+        android:drawableRight="@drawable/zuo"
+        android:paddingBottom="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="5dp"
+        android:text="电影"
+        android:textColor="#000000"
+        android:textSize="16sp" />
+         <Button
+        android:id="@+id/button9"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:drawableLeft="@drawable/yao"
+        android:drawableRight="@drawable/zuo"
+        android:paddingBottom="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="5dp"
+        android:text="汽车"
+        android:textColor="#000000"
+        android:textSize="16sp" />
+            
+      
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
