--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -161,7 +161,8 @@
                 android:text="油"
                 android:textColor="#000000"
                 android:textSize="16sp" />
-              <Button
+
+            <Button
                 android:id="@+id/buttonB"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -175,7 +176,8 @@
                 android:text="柜子"
                 android:textColor="#000000"
                 android:textSize="16sp" />
-            	  <Button
+
+            <Button
                 android:id="@+id/buttonU"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -189,6 +191,20 @@
                 android:text="本子"
                 android:textColor="#000000"
                 android:textSize="16sp" />
+            <Button 
+                android:id="@+id/buttonT"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:drawableLeft="@drawable/yao"
+                android:drawableRight="@drawable/zuo"
+                android:paddingBottom="5dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp"
+                android:text="手机"
+                android:textColor="#000000"
+                android:textSize="16sp"/>
         </LinearLayout>
     </ScrollView>
 
