--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -205,6 +205,21 @@
                 android:text="手机"
                 android:textColor="#000000"
                 android:textSize="16sp"/>
+            <Button 
+                android:id="@+id/buttonJ"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:drawableLeft="@drawable/yao"
+                android:drawableRight="@drawable/zuo"
+                android:paddingBottom="5dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:paddingTop="5dp"
+                android:text="计算器"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                />
         </LinearLayout>
     </ScrollView>
 
