--- a/res/layout/activity_jisuan.xml
+++ b/res/layout/activity_jisuan.xml
@@ -183,12 +183,19 @@
     android:orientation="horizontal">
 <Button 
     android:id="@+id/zero"
-    android:layout_width="180dp"
+    android:layout_width="90dp"
     android:layout_height="match_parent"
     android:layout_margin="5dp"
     android:layout_weight="1"
     android:text="0"
     />
+<Button 
+    android:id="@+id/history"
+    android:layout_width="90dp"
+    android:layout_height="match_parent"
+    android:layout_margin="5dp"
+    android:layout_weight="1"
+    android:text="H"/>
 <Button 
     android:id="@+id/dot"
     android:layout_width="90dp"
